Created advisor, investments and investment profile pages

--- a/dashboard-change-pass.html
+++ b/dashboard-change-pass.html
@@ -36,23 +36,23 @@
 					<li>
 						<a href="dashboard-overview.html" class="bottom-line">
 							<i class="mdi mdi-ticket"></i>
-							<span>Overview</span>
+							<span>Offer</span>
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="dashboard-investment-profile.html">
 							<i class="mdi mdi-account-card-details"></i>
 							<span>investment Profile</span>
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="dashboard-investments.html">
 							<i class="mdi mdi-cash-usd"></i>
 							<span>My Investments</span>
 						</a>
 					</li>
 					<li>
-						<a href="#" class="bottom-line">
+						<a href="dashboard-advisor.html" class="bottom-line">
 							<i class="mdi mdi-approval"></i>
 							<span>Advisor Bids</span>
 						</a>
