--- a/dashboard-advisor.html
+++ b/dashboard-advisor.html
@@ -52,13 +52,13 @@
 						</a>
 					</li>
 					<li>
-						<a href="dashboard-advisor.html" class="bottom-line">
+						<a href="dashboard-advisor.html" class="bottom-line active">
 							<i class="mdi mdi-approval"></i>
 							<span>Advisor Bids</span>
 						</a>
 					</li>
 					<li>
-						<a href="dashboard-profile.html" class="active">
+						<a href="dashboard-profile.html">
 							<i class="mdi mdi-account-circle"></i>
 							<span>Profile</span>
 						</a>
@@ -134,6 +134,7 @@
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
 							<h2>Hi Bogdan</h2>
+							<a href="#" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
@@ -169,124 +170,100 @@
 						<p class="profile-text">To invest in our offers you will need to create an investment profile</p>
 					</div>
 					<div class="dashboard-row">
-						<div class="dashboard-repeat-title">
-							<h3>PROFILE DETAILS</h3>
+						<div class="table-wrapper">
+							<table class="dashboard-table">
+								<thead>
+								<tr>
+									<th style="width: 12%;">TITLE</th>
+									<th style="width: 13%">OFFER CLOSES</th>
+									<th style="width: 10%"># OF UNITS</th>
+									<th style="width: 13%">PRICE PER UNIT</th>
+									<th style="width: 14%">YOUR BID</th>
+									<th style="width: 15%">STATUS</th>
+									<th style="width: 14%"></th>
+									<th></th>
+								</tr>
+								</thead>
+								<tbody>
+								<tr>
+									<td>708 TEST</td>
+									<td>1 January 2019</td>
+									<td>Not Available</td>
+									<td>Not Available</td>
+									<td><span>AU$</span> 1,024.00</td>
+									<td>Pay Submission Fee</td>
+									<td><a href="#" class="pay-apply-button" data-toggle="modal" data-target="#payment-detail">payment details</a></td>
+									<td class="text-center text-nowrap">
+										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
+										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
+									</td>
+								</tr>
+								<tr>
+									<td>TOKEN</td>
+									<td>13 April 2019</td>
+									<td>20</td>
+									<td><span>AU$</span>1.00</td>
+									<td><span>AU$</span>20.00</td>
+									<td>Submit application</td>
+									<td><a href="#" class="pdf-button"><i class="mdi mdi-file-pdf"></i></a><a href="#" class="pay-apply-button">Apply now</a></td>
+									<td class="text-center text-nowrap">
+										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
+										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
+									</td>
+								</tr>
+								<tr>
+									<td>TOKEN</td>
+									<td>13 April 2019</td>
+									<td>20</td>
+									<td><span>AU$</span>1.00</td>
+									<td><span>AU$</span>20.00</td>
+									<td>Awaiting Approval</td>
+									<td></td>
+									<td class="text-center">
+										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
+										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
+									</td>
+								</tr>
+								</tbody>
+							</table>
 						</div>
-						<form action="#">
-							<div class="row profile-details-row">
-								<div class="col-lg-3">
-									<div class="profile-detail-input">
-										<input type="text" id="lbl1">
-										<label for="lbl1">Type</label>
-									</div>
-								</div>
-								<div class="col-lg-3 correct">
-									<div class="profile-detail-input">
-										<input type="text" class="active" id="lbl2" value="Alex Troogler">
-										<label for="lbl2">*First name</label>
-									</div>
-								</div>
-								<div class="col-lg-3 error">
-									<div class="profile-detail-input">
-										<input type="text" id="lbl3">
-										<label for="lbl3">*Last name</label>
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="profile-detail-input">
-										<input type="email" id="lbl4">
-										<label for="lbl4">*Email</label>
-									</div>
-								</div>
-							</div>
-							<div class="row profile-details-row">
-								<div class="col-lg-3">
-									<div class="profile-detail-input">
-										<input type="text" id="lbl5">
-										<label for="lbl5">Company</label>
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="profile-detail-input">
-										<input type="tel" id="lbl6">
-										<label for="lbl6">Phone</label>
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="profile-detail-input">
-										<input type="tel" id="lbl7">
-										<label for="lbl7">*Mobile</label>
-									</div>
-								</div>
-								<div class="col-lg-3">
-									<div class="button-wrapper" style="margin: 0;">
-										<button type="submit" class="progress-btn main-color-btn">
-											<span>Save</span>
-											<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
-												<circle cx="15" cy="15" r="10">
-											</svg>
-										</button>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
-					<div class="dashboard-row">
-						<div class="dashboard-repeat-title">
-							<h3>Advisor</h3>
-						</div>
-						<div class="row advisor-row">
-							<div class="col-md-9">
-								<div class="advisor-info">
-									<div class="advisor-info-row">
-										<p>Your referer code: <span>c01103a2b7bf147273b89e5e43e7f1e8</span></p>
-										<p>Please advise new users to enter this code when joining Akela. This will make sure that you are assigned as their advisor.</p>
-									</div>
-									<div class="advisor-info-row">
-										<p>Your special advisor link is:</p>
-										<p><a href="#">https://stagingsrv.akela.vc/register/?referer=c01103a2b7bf147273b89e5e43e7f1e8</a></p>
-									</div>
-									<div class="advisor-info-row">
-										<p>If your customers use this link your referer code will be added automatically when they join Akela</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3">
-								<div class="upload-file-wrapper">
-									<div class="upload-file">
-										<input type="file" class="file">
-										<a href="#" class="btn-repeat">Upload file</a>
-									</div>
-									<p>You can download an <a href="#">example csv here</a></p>
-								</div>
-							</div>
+						<div class="text-center">
+							<a href="#" class="btn-repeat dark db-load-more">Load more</a>
 						</div>
 					</div>
-					<div class="dashboard-row">
-						<div class="dashboard-repeat-title">
-							<h3>invite friends</h3>
-						</div>
-						<p class="profile-text">Invite friends to Akela via email (Separate multiple email addresses with commas)</p>
-						<div class="row row-invite-friends">
-							<div class="col-md-9">
-								<div class="friends-list">
-									<div class="friends-wrap d-flex flex-wrap">
-										<span>bogdan999ivanov@gmail.com <a href="#"><i class="mdi mdi-close"></i></a></span>
-										<span>test@gmail.com <a href="#"><i class="mdi mdi-close"></i></a></span>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3">
-								<div class="button-wrapper" style="margin: 0;">
-									<button type="submit" class="progress-btn main-color-btn">
-										<span>invite friends</span>
-										<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
-											<circle cx="15" cy="15" r="10">
-										</svg>
-									</button>
-								</div>
-							</div>
-						</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="payment-detail" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered payment-detail-modal" role="document">
+				<div class="modal-content">
+					<a href="#" class="modal-close" data-dismiss="modal" aria-label="Close"><i class="mdi mdi-close"></i></a>
+					<h2>PLEASE PAY SUBMISSION FEE</h2>
+					<div class="payment-detail-row">
+						<p><span>OFFER: </span>{{ offer.title }}</p>
+						<p><span>SHARES: </span>{{ memberApplication.numberOfShares }} at {{ memberApplication.pricePerShare|number_format(2, '.', ',') }} per {{shareTYPE}}</p>
+						<p><span>TOTAL: </span>A${{ memberApplication.total|number_format(3, '.', ',') }} </p>
+					</div>
+					<div class="payment-detail-row">
+						<p>{{ application.procedureText }}</p>
+					</div>
+					<div class="payment-detail-row">
+						<p><span>Transfer Detail:</span></p>
+						<p>{{ application.bankDetails|raw }}</p>
+						<p>{% if memberApplication.referenceNumber is defined %} AKELA APPLICATION REFERENCE: {{ memberApplication.referenceNumber }} {% endif %}</p>
+					</div>
+					<div class="payment-detail-row">
+						<p>BANK REFERENCE - Please QUOTE your AKELA Reference# as the bank reference when making the payment.</p>
+						<p>Please send confirmation of payment to investors@akela.vc</p>
+						<p>Thank you. {{ projectName() }}</p>
+					</div>
+					<div class="payment-detail-row">
+						<p><span>PLEASE ALLOW TIME FOR US TO PROCESS ALL APPLICATIONS AND RECEIVE FUNDS.</span></p>
+						<p>We will update the status of your application (currently ‘Payment Pending’) at the appropriate time.</p>
+					</div>
+					<div class="d-flex justify-content-end position-relative">
+						<a href="#" class="btn-repeat dashboard-btn" data-dismiss="modal" aria-label="Close">Ok</a>
 					</div>
 				</div>
 			</div>
