--- a/dashboard-investment-profile.html
+++ b/dashboard-investment-profile.html
@@ -137,6 +137,77 @@
 							<a href="#" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
 						</div>
 					</div>
+					<div class="dashboard-investment-row">
+						<div class="dashboard-investment-profile profile-details-row row justify-content-between">
+							<div class="col-md-5">
+								<div class="select-iprofile">
+									<span class="invest-title">SELECT INVESTMENT PROFILE</span>
+									<select>
+										<option value="">Individual</option>
+										<option value="">Company</option>
+										<option value="">Trust</option>
+										<option value="">Self managed Superannuation Fund Trustee</option>
+									</select>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="investment-details">
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span class="font-weight-bold">Investment Profile Status</span>
+										<mark>Active</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>Profile details</span>
+										<mark>Complete</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>ID verification</span>
+										<mark>Complete</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>Wholesale Investor</span>
+										<mark>Yes</mark>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="dashboard-steps-wrapper">
+						<div class="dashboard-investment-steps">
+							<div class="progress-wrapper">
+								<div class="progress-line" style="width: 50%;"></div>
+							</div>
+							<div class="d-flex align-items-center justify-content-between">
+								<div class="step-col completed">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>1</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>profile details</span>
+								</div>
+								<div class="step-col active">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>2</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>id verification</span>
+								</div>
+								<div class="step-col">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>3</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>wholesale investor</span>
+								</div>
+							</div>
+						</div>
+					</div>
 					123
 				</div>
 			</div>
