Changed logo to svg

--- a/dashboard-investment-profile.html
+++ b/dashboard-investment-profile.html
@@ -24,8 +24,8 @@
 			<div class="dashboard-sidebar">
 				<div class="heading d-flex justify-content-between align-items-end">
 					<a href="#">
-						<img src="images/logo.png" class="logo-lg" alt="">
-						<img src="images/logo-sm.png" class="logo-sm" alt="">
+						<img src="images/logo.svg" class="logo-lg" alt="">
+						<img src="images/logo-sm.svg" class="logo-sm" alt="">
 					</a>
 
 					<a href="#" class="sidebar-trigger">
@@ -208,7 +208,45 @@
 							</div>
 						</div>
 					</div>
-					123
+					<div class="dashboard-investment-row">
+						<span class="invest-title">Details</span>
+						<div class="row profile-details-row">
+							<div class="col-lg-3">
+								<label for="lbl5">Subscription</label>
+								<select id="lbl5">
+									<option value="">Subscription Tp7H</option>
+									<option value="">Subscription Tp7H</option>
+									<option value="">Subscription Tp7H</option>
+									<option value="">Subscription Tp7H</option>
+								</select>
+							</div>
+							<div class="col-lg-3">
+								<div class="profile-detail-input" style="margin-top: 28px;">
+									<input type="tel" id="lbl6">
+									<label for="lbl6">Coupon</label>
+								</div>
+							</div>
+							<div class="col-lg-3">
+								<label for="lbl7">Payment method</label>
+								<select id="lbl7">
+									<option value="">Payment method</option>
+									<option value="">Payment method</option>
+									<option value="">Payment method</option>
+									<option value="">Payment method</option>
+								</select>
+							</div>
+							<div class="col-lg-3">
+								<div class="button-wrapper">
+									<button type="submit" class="progress-btn main-color-btn">
+										<span>Order</span>
+										<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
+											<circle cx="15" cy="15" r="10">
+											</circle></svg>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
