--- a/dashboard-investments.html
+++ b/dashboard-investments.html
@@ -24,8 +24,8 @@
 			<div class="dashboard-sidebar">
 				<div class="heading d-flex justify-content-between align-items-end">
 					<a href="#">
-						<img src="images/logo.png" class="logo-lg" alt="">
-						<img src="images/logo-sm.png" class="logo-sm" alt="">
+						<img src="images/logo.svg" class="logo-lg" alt="">
+						<img src="images/logo-sm.svg" class="logo-sm" alt="">
 					</a>
 
 					<a href="#" class="sidebar-trigger">
