--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,7 +23,7 @@
 				<div class="header-wrapper d-flex flex-row justify-content-between align-items-center">
 					<div class="logo">
 						<a href="index.html">
-							<img src="images/logo.png" class="img-fluid" alt="">
+							<img src="images/logo.svg" class="img-fluid" alt="">
 							<span>Akela - The integrated investment platform</span>
 						</a>
 					</div>
@@ -205,7 +205,7 @@
 					<div class="col-xl-3 col-lg-2">
 						<div class="logo">
 							<a href="index.html">
-								<img src="images/logo.png" class="img-fluid" alt="">
+								<img src="images/logo.svg" class="img-fluid" alt="">
 								<span>The integrated investment platform</span>
 							</a>
 						</div>
