Created 'create investment profile page', fixed some style for mobile

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 			</div>
 		</header>
 
-		<main class="login-main">
+		<main class="login-main contact-main">
 			<img src="images/media-before.png" class="img-fluid media-img" alt="">
 
 			<section class="latest-news-section contact-section">
