--- a/dashboard-create-ip.html
+++ b/dashboard-create-ip.html
@@ -133,8 +133,10 @@
 				<div class="dashboard-wrapper">
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
-							<h2>INVESTMENT PROFILE</h2>
-							<a href="dashboard-create-ip.html" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
+							<a href="dashboard-investment-profile.html" class="back-button">
+								<i class="mdi mdi-arrow-left"></i>
+								Create a new investment profile
+							</a>
 						</div>
 					</div>
 					<div class="dashboard-investment-row">
@@ -150,66 +152,13 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-md-3">
-								<div class="investment-details">
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span class="font-weight-bold">Investment Profile Status</span>
-										<mark>Active</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>Profile details</span>
-										<mark>Complete</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>ID verification</span>
-										<mark>Complete</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>Wholesale Investor</span>
-										<mark>Yes</mark>
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
-					<div class="dashboard-steps-wrapper">
-						<div class="dashboard-investment-steps">
-							<div class="progress-wrapper">
-								<div class="progress-line" style="width: 50%;"></div>
-							</div>
-							<div class="d-flex align-items-center justify-content-between">
-								<div class="step-col completed">
-									<div class="circle-wrapper">
-										<div class="circle">
-											<em>1</em>
-											<i class="mdi mdi-check"></i>
-										</div>
-									</div>
-									<span>profile details</span>
-								</div>
-								<div class="step-col active">
-									<div class="circle-wrapper">
-										<div class="circle">
-											<em>2</em>
-											<i class="mdi mdi-check"></i>
-										</div>
-									</div>
-									<span>id verification</span>
-								</div>
-								<div class="step-col">
-									<div class="circle-wrapper">
-										<div class="circle">
-											<em>3</em>
-											<i class="mdi mdi-check"></i>
-										</div>
-									</div>
-									<span>wholesale investor</span>
-								</div>
-							</div>
-						</div>
+					<div class="hint-wrapper">
+						<p>Please, complete the form below to create a new Investment Profile</p>
 					</div>
 					<div class="dashboard-investment-row">
-						<span class="invest-title">Details</span>
+						<span class="invest-title">PROFILE DETAILS</span>
 						<div class="row profile-details-row">
 							<div class="col-lg-3 correct">
 								<label for="lbl5">Type</label>
@@ -351,7 +300,7 @@
 							<div class="col-lg-3">
 								<div class="button-wrapper" style="margin: 0;">
 									<button type="submit" class="progress-btn main-color-btn">
-										<span>Update</span>
+										<span>Save</span>
 										<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
 											<circle cx="15" cy="15" r="10">
 											</circle></svg>
