--- a/dashboard-overview.html
+++ b/dashboard-overview.html
@@ -135,7 +135,7 @@
 						<div class="heading">
 							<h2>Please create an investment profile</h2>
 							<p>To invest in our offers you will need to create an investment profile</p>
-							<a href="#" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
+							<a href="dashboard-create-ip.html" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
