--- a/offer.html
+++ b/offer.html
@@ -654,7 +654,7 @@
 		<div class="modal fade" id="detail-info" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered invest-modal-dialog" role="document">
 				<div class="modal-content">
-					<span class="modal-close" data-dismiss="modal" aria-label="Close"><i class="mdi mdi-close"></i></span>
+					<i class="modal-close" data-dismiss="modal" aria-label="Close"><i class="mdi mdi-close"></i></i>
 					<div class="management-info-wrapper">
 						<div class="management-photo">
 							<img src="images/avatar-man.png" class="img-fluid" alt="">
