--- a/dashboard-change-pass.html
+++ b/dashboard-change-pass.html
@@ -143,7 +143,7 @@
 						<form action="#">
 							<div class="row profile-details-row">
 								<div class="col-lg-3 col-md-6">
-									<div class="profile-detail-input" style="margin-bottom: 15px;">
+									<div class="profile-detail-input">
 										<input type="email" id="lbl1">
 										<label for="lbl1">Email</label>
 									</div>
