--- a/dashboard-investments.html
+++ b/dashboard-investments.html
@@ -134,7 +134,7 @@
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
 							<h2>Hi Bogdan</h2>
-							<a href="#" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
+							<a href="dashboard-create-ip.html" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
