Add text block on investment profile page

--- a/dashboard-create-ip.html
+++ b/dashboard-create-ip.html
@@ -139,6 +139,11 @@
 							</a>
 						</div>
 					</div>
+					<div class="dashboard-investment-row" style="margin-bottom: 30px;">
+						<span class="invest-title">NEW INVESTMENT PROFILE</span>
+						<p class="profile-text">We will at all times seek to ensure that the personal information collected and held by us is protected from misuse, loss, unauthorised access, modification or disclosure.  At all times your personal information is treated as confidential and any sensitive information is treated as highly confidential.  Your personal information is generally held in your client file which may be in hardcopy or electronic.</p>
+						<p class="profile-text">In the event you cease to be an Akela account holder, any personal information which we hold about you will be maintained in a secure offsite storage facility for a period of seven years in order to comply with legislative and professional requirements, following which time the information will be destroyed.  Akela will ensure that any documents that are destroyed are done so in a secure manner.</p>
+					</div>
 					<div class="dashboard-investment-row">
 						<div class="dashboard-investment-profile profile-details-row row justify-content-between">
 							<div class="col-md-5">
